<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">



        <TextView
            android:id="@+id/alertaTextView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="28dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:text="IMPORTANTE: PARO DE LANCHA COLECTIVA. PEDIR LANCHA TAXI"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:id="@+id/LinearVertResult"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:layout_constraintBottom_toTopOf="@id/linearGuardar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/email"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/providerTextView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/proveedor" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="ciudad, calle, número, piso"
                android:inputType="textCapWords"
                android:textColorHint="#757575"
                android:autofillHints="" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/phone"
                android:inputType="phone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearCerrarS"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearEliminar">

            <Button
                android:id="@+id/cerrarSesionBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/cerrar_sesion"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearGuardar"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/LinearCerrarS"
            app:layout_constraintStart_toStartOf="@id/LinearCerrarS"
            app:layout_constraintTop_toBottomOf="@+id/LinearVertResult">

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@color/purple_700"
                android:text="@string/guardar"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearRecuperar"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/LinearCerrarS"
            app:layout_constraintStart_toStartOf="@id/LinearCerrarS"
            app:layout_constraintTop_toBottomOf="@id/linearGuardar">

            <Button
                android:id="@+id/getBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:text="@string/recuperar"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearEliminar"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/LinearCerrarS"
            app:layout_constraintStart_toStartOf="@id/LinearCerrarS"
            app:layout_constraintTop_toBottomOf="@id/linearRecuperar">

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:text="@string/eliminar"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>